# ce_sim

./: .gitignore  .gitmodules  article.tex  basis_generator_chi.py  basis_generator_chi_demux.py  dataset.py  dataset_chi.py  experiment_batch_rhs.py  experiment_dist_native_complex_smoke.py  experiment_dist_parallel.py  experiment_dist_vs_serial.py  experiment_matrix_structure.py  experiment_symbolic_reuse.py  layer.py  layer_sdm.py  layer_wdm.py  layers.py  main.slurm  model.py  model_sdm.py  model_wdm.py  pyproject.toml  requirements.txt  simulation_backend.py  test.ipynb  train.py  viz.py
Configuration/: 2bit.toml  5bit.toml  6bit.toml  8bit.toml  SDMDemux_bin.toml  WDMDemux_bin.toml  chi_config.toml  input.npy  output.npy
ceviche/: jacobians.py  modes.py  optimizers.py  solvers.py  viz.py
dataset/5bit/: input.npy  output.npy
dataset/6bit/: input.npy  output.npy
docs/: 2026-04-08-simulation-optimization-switches.md  2026-04-08-superlu-nanobind.md  2026-04-09-batch-rhs-experiment.md  2026-04-09-symbolic-reuse-experiment.md  2026-04-13-dist-parallel-experiment.md  2026-04-13-serial-vs-dist-baseline.md  2026-04-14-dist-native-complex-migration.md
fdfd_solver/: __init__.py  constants.py  dxy_matrix.py  fdfd.py  make_A_b.py  s_matrix.py  solver.py
spsolver/: __init__.py  bindings_superlu.py  bindings_superlu_dist.py
spsolver/nanobind/: CMakeLists.txt
spsolver/nanobind/src/: superlu_nb.cpp
