[project]
name = "ce-sim"
version = "0.1.0"
description = "inverse design of waveguide devices"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "autograd>=1.3",
    "matplotlib",
    "numpy<2",
    "pyMKL",
    "scipy",
    "toml",
    "loguru",
    "jax",
    "flax",
    "orbax-checkpoint",
    "typer",
    "agjax"
]
